deploy: c2b89556ae64e19ee96f09df66a4800d42d594b4

--- a/slides/08_patterns.html
+++ b/slides/08_patterns.html
@@ -577,6 +577,19 @@ data-cites="erinc2020solid">[10]</span></p>
 general-purpose interface. Clients should not be forced to implement a
 function they do no need.</p>
 </blockquote>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="figures/solid/interface_segregation_pre.svg"
+height="275" /></p>
+</div><div class="column fragment" style="width:50%;">
+<p><img data-src="figures/solid/interface_segregation.svg"
+height="275" /></p>
+</div>
+</div>
+<div class="text-smaller">
+<p>example based on <span class="citation"
+data-cites="oloruntoba2024solid">[6]</span></p>
+</div>
 </section>
 <section id="dependency-inversion-principle" class="slide level2">
 <h2>dependency inversion principle</h2>
