deploy: 0bb9f71885ce2e5c37e6c0061b00d566e0676576

--- a/slides/08_patterns.html
+++ b/slides/08_patterns.html
@@ -988,6 +988,22 @@ data-cites="woltmann2023hexagonal">[14]</span></p>
 project</p>
 </section>
 
+<section id="mvc---mvp---mvvm" class="title-slide slide level1">
+<h1>MVC - MVP - MVVM</h1>
+<div class="columns">
+<div class="column" style="width:30%;">
+<p><img data-src="figures/mvc.drawio.svg" width="300" /></p>
+</div><div class="column" style="width:30%;">
+<p><img data-src="figures/mvp.drawio.svg" width="300" /></p>
+</div><div class="column" style="width:30%;">
+<p><img data-src="figures/mvvm.drawio.svg" width="300" /></p>
+</div>
+</div>
+<div class="text-smaller">
+
+</div>
+</section>
+
 <section>
 <section id="user-statistics-example" class="title-slide slide level1">
 <h1>user statistics example</h1>
