--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -168,24 +168,25 @@ mapping</td>
 <td style="text-align: right;">4</td>
 <td style="text-align: center;">2024-10-01</td>
 <td style="text-align: center;">UML, C4</td>
-<td style="text-align: center;">workshop</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
 <td style="text-align: center;">2024-10-08</td>
-<td style="text-align: center;">SOLID, clean code</td>
+<td style="text-align: center;">design patterns</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
 <td style="text-align: center;">2024-10-15</td>
-<td style="text-align: center;">legacy code, review</td>
-<td style="text-align: center;">“coding” example</td>
+<td style="text-align: center;">implementation planning, clean
+clode</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">testing, review</td>
+<td style="text-align: center;">legacy code, review</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
@@ -197,19 +198,19 @@ mapping</td>
 <tr class="odd">
 <td style="text-align: right;">9</td>
 <td style="text-align: center;">2024-11-05</td>
-<td style="text-align: center;">dependency management</td>
+<td style="text-align: center;">testing, review</td>
 <td style="text-align: center;">VCS basics</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">10</td>
 <td style="text-align: center;">2024-11-12</td>
-<td style="text-align: center;">CI, automatization, devops</td>
+<td style="text-align: center;">dependency management</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">11</td>
 <td style="text-align: center;">2024-11-19</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;">CI, automatization, devops</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
@@ -278,24 +279,25 @@ mapping</td>
 <td style="text-align: right;">4</td>
 <td style="text-align: center;">2024-10-01</td>
 <td style="text-align: center;">UML, C4</td>
-<td style="text-align: center;">UML in practice</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
 <td style="text-align: center;">2024-10-08</td>
-<td style="text-align: center;">SOLID, clean code</td>
+<td style="text-align: center;">design patterns</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
 <td style="text-align: center;">2024-10-15</td>
-<td style="text-align: center;">legacy code, review</td>
-<td style="text-align: center;">“coding” example</td>
+<td style="text-align: center;">implementation planning, clean
+clode</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">testing, review</td>
+<td style="text-align: center;">legacy code, review</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 </tbody>
@@ -330,19 +332,19 @@ mapping</td>
 <tr class="even">
 <td style="text-align: right;">9</td>
 <td style="text-align: center;">2024-11-05</td>
-<td style="text-align: center;">dependency management</td>
+<td style="text-align: center;">testing, review</td>
 <td style="text-align: center;">VCS basics</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">10</td>
 <td style="text-align: center;">2024-11-12</td>
-<td style="text-align: center;">CI, automatization, devops</td>
+<td style="text-align: center;">dependency management</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">11</td>
 <td style="text-align: center;">2024-11-19</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;">CI, automatization, devops</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
