deploy: e6e64af2085c5ad7e534b0a5e039112489b38abb

--- a/slides/02_scrum.html
+++ b/slides/02_scrum.html
@@ -693,8 +693,8 @@ discuss the sprint backlog</li>
 <figure>
 <img
 data-src="figures/borrowed/how_to_run_short_and_effective_meetings.jpg"
-alt="by Sam Lau | used with the author’s permission" />
-<figcaption aria-hidden="true">by <a
+alt="© Sam Lau | used with the author’s permission" />
+<figcaption aria-hidden="true">© <a
 href="https://www.samlau.xyz/about">Sam Lau</a> | used with the author’s
 permission</figcaption>
 </figure>
