--- a/lectures/02_scrum.html
+++ b/lectures/02_scrum.html
@@ -676,8 +676,8 @@ the sprint backlog</li>
 <div class="column center-content" width="45%">
 <figure>
 <img src="figures/borrowed/how_to_run_short_and_effective_meetings.jpg"
-alt="by Sam Lau | used with the author’s permission" />
-<figcaption aria-hidden="true">by <a
+alt="© Sam Lau | used with the author’s permission" />
+<figcaption aria-hidden="true">© <a
 href="https://www.samlau.xyz/about">Sam Lau</a> | used with the author’s
 permission</figcaption>
 </figure>
