deploy: ecaf3eecdbeaf45aa38f822a78419455714207a2

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@ programming</a>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
+<li>interfaces</li>
 <li>implementation planning</li>
 </ol>
 
