--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -361,6 +361,7 @@ programming</a>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
+<li>interfaces</li>
 <li>implementation planning</li>
 </ol>
 
