--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ programming</a>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
-<li>interfaces</li>
+<li><a href="/software-engineering/slides/09_interfaces.html">interfaces</a></li>
 <li>implementation planning</li>
 </ol>
 
