--- a/print.html
+++ b/print.html
@@ -362,7 +362,7 @@ programming</a>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
-<li>interfaces</li>
+<li><a href="lectures//software-engineering/slides/09_interfaces.html">interfaces</a></li>
 <li>implementation planning</li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
