deploy: d4e26a8bef447c001982696ba97d19e01ab841dc

--- a/slides/09_interfaces.html
+++ b/slides/09_interfaces.html
@@ -393,8 +393,33 @@ width="225" /></p>
 </div>
 </div>
 </section>
-<section id="language-level" class="slide level2">
-<h2>language level</h2>
+<section id="api-versions" class="slide level2">
+<h2>API versions</h2>
+<div class="columns column-gapless">
+<div class="column" style="width:60%;">
+<p><img data-src="figures/user_statistics/interface_versions.svg"
+width="475" /></p>
+</div><div class="column" style="width:40%;">
+<p><img data-src="figures/user_statistics/interface_versions_gantt.svg"
+width="375" /></p>
+<div class="text-smaller">
+<ul>
+<li>2021-06-30: API v1’s end of live
+<ul>
+<li>service does not accept connections via APIv1</li>
+<li>code can be removed (no need to maintain it anymore)</li>
+</ul></li>
+</ul>
+</div>
+</div>
+</div>
+<div class="fragment">
+<p><code>https://developers.facebook.com/v21.0/me?fields=id,name</code></p>
+</div>
+</section></section>
+<section>
+<section id="language-level" class="title-slide slide level1">
+<h1>language level</h1>
 <div class="text-smaller">
 <p>GeoPandas 1.0 / new deprecations: unary_union attribute is now
 deprecated and replaced by the union_all() method (#3007) allowing
@@ -467,11 +492,11 @@ data-cites="ozler2019java">[3]</span></p>
 <p>IDEs can parse the deprecation decorators and show to the developer
 during work</p>
 </section></section>
-<section id="nasa-lost-a-327-million-dollar-mission"
+<section id="a-327-million-dollar-interface-miscommunication"
 class="title-slide slide level1">
-<h1>NASA lost a 327 Million Dollar Mission</h1>
-<p>NASA and Lockheed Martin mixed up units for the Mars Climate
-Orbiter</p>
+<h1>a 327 Million Dollar interface miscommunication</h1>
+<p>NASA and Lockheed Martin mixed up units for the Mars Climate Orbiter
+(1999)</p>
 <div class="columns">
 <div class="column mt-1" style="width:60%;">
 <ul>
