deploy: c5e195992aaa9fe7ba1616ba53fa9562666d4881

--- a/slides/09_interfaces.html
+++ b/slides/09_interfaces.html
@@ -207,6 +207,11 @@ data-src="figures/user_statistics/component_interface.svg" /></p>
 </dl>
 </div>
 </div>
+</section>
+<section id="user-statistics---c4-component" class="slide level2">
+<h2>user statistics - C4 component</h2>
+<p><img data-src="figures/user_statistics/c4_component.excalidraw.svg"
+height="500" /></p>
 </section></section>
 <section>
 <section id="interface-mocking" class="title-slide slide level1">
