deploy: cb63991d6bc67816e00cacf071777e8d111ecb78

--- a/slides/project.html
+++ b/slides/project.html
@@ -140,7 +140,7 @@ height="300" /></p>
 </ul></li>
 <li>identify dependencies between the functions / modules</li>
 <li>plan sprints with usable increments</li>
-<li>deadline: 2024-12-03 (week 13)
+<li>deadline: <strong>3 December 2024</strong> (week 13)
 <ul>
 <li>when the team also presents the design as a presentation</li>
 </ul></li>
@@ -167,10 +167,76 @@ Drawings</a></li>
 Drawings</a></li>
 <li>team management: <a href="https://trello.com/">Trello</a></li>
 <li>UML: <a href="https://app.diagrams.net/">draw.io</a></li>
-<li>C4: <a href="https://docs.google.com/drawings">Google
-Drawings</a></li>
+<li>C4: <a href="https://docs.google.com/drawings">Google Drawings</a>
+<ul>
+<li><a href="https://www.drawio.com/blog/c4-modelling">create C4
+diagrams in draw.io</a></li>
+</ul></li>
 </ul>
 </section>
+
+<section id="submission" class="title-slide slide level1">
+<h1>submission</h1>
+<ul>
+<li>you have to submit the main design document</li>
+<li>you may indicate who was responsible for each part</li>
+<li>including every diagram
+<ul>
+<li>please keep every version of the diagrams and attach them to the
+submission
+<ul>
+<li>I would like to see the evolution of your design</li>
+</ul></li>
+</ul></li>
+<li>and the presentation</li>
+</ul>
+<p>you should the submit these by 3 December 2024 via Moodle, when you
+also present your work</p>
+</section>
+
+<section>
+<section id="presentation" class="title-slide slide level1">
+<h1>presentation</h1>
+<ul>
+<li>the presentation should contain the purpose of the software
+<ul>
+<li>practically the project assignment</li>
+<li>but with your interpretation</li>
+</ul></li>
+<li>team members
+<ul>
+<li>maybe with responsibilities</li>
+</ul></li>
+<li>the introduction of your design
+<ul>
+<li>from high level to the low level (according to C4)</li>
+<li>describe the overall design</li>
+<li>focusing on the interactions between your components</li>
+<li>detail at least one of the component to the class level</li>
+<li>attach UI mockups</li>
+</ul></li>
+</ul>
+</section>
+<section id="presentation-1" class="slide level2">
+<h2>presentation</h2>
+<ul>
+<li>you may separate the presentation by target audience
+<ul>
+<li>for the customer almost as if you wanted “sell” the software and
+introduce it from the user’s perspective
+<ul>
+<li>C4 system context, use case, user story flows with UI mockups and
+explanation</li>
+</ul></li>
+<li>and a more technical part focusing on the internal structures
+<ul>
+<li>zoom into the system as C4 modelling propagates</li>
+<li>detail the interfaces and the environments where a software will
+operate</li>
+</ul></li>
+</ul></li>
+</ul>
+</section></section>
     </div>
   </div>
 
