deploy: 21495de9fca0f5726f40b967c785dbf595427493

--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -179,14 +179,13 @@ mapping</td>
 <tr class="even">
 <td style="text-align: right;">6</td>
 <td style="text-align: center;">2024-10-15</td>
-<td style="text-align: center;">implementation planning, clean
-clode</td>
+<td style="text-align: center;">interfaces, implementation planning</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">legacy code, review</td>
+<td style="text-align: center;">clean clode, legacy code, review</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
@@ -290,14 +289,13 @@ mapping</td>
 <tr class="even">
 <td style="text-align: right;">6</td>
 <td style="text-align: center;">2024-10-15</td>
-<td style="text-align: center;">implementation planning, clean
-clode</td>
+<td style="text-align: center;">interfaces, implementation planning</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">legacy code, review</td>
+<td style="text-align: center;">clean clode, legacy code, review</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 </tbody>
@@ -1024,12 +1022,6 @@ client</li>
 <p><img data-src="figures/server_client.drawio.svg" width="325" /></p>
 </div>
 </div>
-<!--# project management triangle
-
-![](figures/quality_time_cost.drawio.svg){width=60%}
-
-::: notes
-:::-->
 </section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
