--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -227,14 +227,13 @@ mapping</td>
 <tr class="even">
 <td style="text-align: right;">6</td>
 <td style="text-align: center;">2024-10-15</td>
-<td style="text-align: center;">implementation planning, clean
-clode</td>
+<td style="text-align: center;">interfaces, implementation planning</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">legacy code, review</td>
+<td style="text-align: center;">clean clode, legacy code, review</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
@@ -856,10 +855,6 @@ services</li>
 <img src="figures/server_client.drawio.svg" width="325" />
 </div>
 </div>
-<!--# project management triangle
-&#10;![](figures/quality_time_cost.drawio.svg){width=60%}
-&#10;::: notes
-:::-->
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
