deploy: a8be32f25a986a32f0c9069ace50efade0d403ce

--- a/slides/08_patterns.html
+++ b/slides/08_patterns.html
@@ -1225,6 +1225,7 @@ but that would also be a dependency</li>
 architectures!</p>
 </div>
 </section></section>
+<section>
 <section id="record-architecture-decisions"
 class="title-slide slide level1">
 <h1>record architecture decisions</h1>
@@ -1260,7 +1261,45 @@ href="https://github.com/npryce/adr-tools">adr-tools</a> to manage the
 markdown based (Nygard stlye) the ADR files.</p>
 </aside>
 </section>
-
+<section id="why-write-ards" class="slide level2">
+<h2>why write ARDs?</h2>
+<div class="columns column-gapless">
+<div class="column" style="width:80%;">
+<ul>
+<li>they’re not for you, they’re for the future you
+<ul>
+<li>ADRs capture the decision at the time it’s being made
+<ul>
+<li>on a meeting, on Slack, Teams, Zoom, etc.</li>
+<li>like a structured memo</li>
+</ul></li>
+</ul></li>
+<li>they’re not for you, they’re for your peers
+<ul>
+<li>ADRs help your teammates understand why the feature is built the way
+it is and not built some other way
+<ul>
+<li>alternatives considered and pros/cons within the ADRs</li>
+</ul></li>
+</ul></li>
+<li>they’re not for you, they’re for your future peers
+<ul>
+<li>writing down decisions help communicate to your current teammates,
+but also those who will join later</li>
+<li>it is an asynchronous way of communication, no need for a Zoom call,
+which reduces interruption</li>
+</ul></li>
+</ul>
+</div><div class="column" style="width:20%;">
+<p><img
+data-src="figures/publicdomainvectors/shelves-with-office-folders.svg" /></p>
+</div>
+</div>
+<div class="text-smaller mt-1">
+<p>based on <a href="https://github.blog/2020-08-13-why-write-adrs/">Why
+Write ADRs</a> by Eli Perkins</p>
+</div>
+</section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
 <div id="refs" class="text-smaller references csl-bib-body" role="list">
