deploy: 36a68f3eac151920abda4aaff203ebc5c578bd2d

--- a/print.html
+++ b/print.html
@@ -363,8 +363,20 @@ programming</a>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/09_interfaces.html">interfaces</a></li>
-<li>implementation planning</li>
+<li><a href="lectures//software-engineering/slides/10_planning.html">implementation
+planning</a></li>
 </ol>
+<h3 id="readings-5"><a class="header" href="#readings-5">readings</a></h3>
+<ul>
+<li><a href="https://riskstorming.com/">riskstorming.com</a></li>
+<li><a href="https://owasp.org/www-community/OWASP_Risk_Rating_Methodology">OWASP Risk Rating
+Methodology</a></li>
+<li><a href="https://www.atlassian.com/agile/project-management/estimation">Story points and
+estimation</a> -
+by Dan Radigan</li>
+<li><a href="https://www.scrum.org/resources/blog/what-scrum-says-about-estimates">What Scrum Says About
+Estimates</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
