deploy: cae4111ac05ec966885ce0fa7df58f32d4032546

--- a/index.html
+++ b/index.html
@@ -375,6 +375,8 @@ estimation</a> -
 by Dan Radigan</li>
 <li><a href="https://www.scrum.org/resources/blog/what-scrum-says-about-estimates">What Scrum Says About
 Estimates</a></li>
+<li><a href="https://stackoverflow.com/help/minimal-reproducible-example">How to create a Minimal, Reproducible
+Example</a></li>
 </ul>
 
                     </main>
