--- a/print.html
+++ b/print.html
@@ -376,6 +376,8 @@ estimation</a> -
 by Dan Radigan</li>
 <li><a href="https://www.scrum.org/resources/blog/what-scrum-says-about-estimates">What Scrum Says About
 Estimates</a></li>
+<li><a href="https://stackoverflow.com/help/minimal-reproducible-example">How to create a Minimal, Reproducible
+Example</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
