--- a/slides/10_planning.html
+++ b/slides/10_planning.html
@@ -151,6 +151,7 @@ research about how to use it</li>
 </section>
 <section id="fail-fast" class="slide level2">
 <h2>fail fast</h2>
+<p>~ indirect proof, proof of contradiction</p>
 <div class="columns">
 <div class="column" style="width:60%;">
 <ul>
@@ -167,10 +168,10 @@ research about how to use it</li>
 </div><div class="column" style="width:40%;">
 <figure>
 <img data-src="figures/autocrop.png" width="300"
-alt="screenshot of leblancfg/autocrop GitHub project" />
+alt="screenshot of leblancfg/autocrop GitHub project page" />
 <figcaption aria-hidden="true">screenshot of <a
 href="https://github.com/leblancfg/autocrop">leblancfg/autocrop</a>
-GitHub project</figcaption>
+GitHub project page</figcaption>
 </figure>
 </div>
 </div>
