deploy: 7e94490554d871c4ce90518eae36c3a6e8b0cc85

--- a/slides/10_planning.html
+++ b/slides/10_planning.html
@@ -175,6 +175,9 @@ GitHub project page</figcaption>
 </figure>
 </div>
 </div>
+<aside class="notes">
+<p>https://en.wikipedia.org/wiki/Fail_fast_(business)</p>
+</aside>
 </section>
 <section id="minimal-workable-example" class="slide level2">
 <h2>minimal workable example</h2>
