deploy: 2b21eec6377bba2b41651a80e50bf4cb1e1b755b

--- a/print.html
+++ b/print.html
@@ -365,6 +365,7 @@ programming</a>
 <li><a href="lectures//software-engineering/slides/09_interfaces.html">interfaces</a></li>
 <li><a href="lectures//software-engineering/slides/10_planning.html">implementation
 planning</a></li>
+<li><a href="lectures//software-engineering/slides/11_wireframeing.html">wireframing</a></li>
 </ol>
 <h3 id="readings-5"><a class="header" href="#readings-5">readings</a></h3>
 <ul>
@@ -378,6 +379,9 @@ by Dan Radigan</li>
 Estimates</a></li>
 <li><a href="https://stackoverflow.com/help/minimal-reproducible-example">How to create a Minimal, Reproducible
 Example</a></li>
+<li><a href="https://www.uxdesigninstitute.com/blog/what-is-wireframing/">What is wireframing? A complete
+guide</a> -
+by Louise Bruton</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
