--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@ programming</a>
 <li><a href="/software-engineering/slides/09_interfaces.html">interfaces</a></li>
 <li><a href="/software-engineering/slides/10_planning.html">implementation
 planning</a></li>
+<li><a href="/software-engineering/slides/11_wireframeing.html">wireframing</a></li>
 </ol>
 <h3 id="readings-5"><a class="header" href="#readings-5">readings</a></h3>
 <ul>
@@ -377,6 +378,9 @@ by Dan Radigan</li>
 Estimates</a></li>
 <li><a href="https://stackoverflow.com/help/minimal-reproducible-example">How to create a Minimal, Reproducible
 Example</a></li>
+<li><a href="https://www.uxdesigninstitute.com/blog/what-is-wireframing/">What is wireframing? A complete
+guide</a> -
+by Louise Bruton</li>
 </ul>
 
                     </main>
